--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-status-codes": "2.2.0",
     "joi": "17.9.2",
     "mongoose": "7.3.1",
+    "morgan": "^1.10.0",
     "nanoid": "4.0.2",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "4.6.3"
