--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-errors": "2.0.0",
     "http-status-codes": "2.2.0",
     "joi": "17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "7.3.1",
     "morgan": "^1.10.0",
     "nanoid": "4.0.2",
