--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hiuni-backend",
+  "name": "daniyo-backend",
   "version": "1.0.0",
   "main": "./src/server.js",
   "type": "module",
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "7.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "4.0.2",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "4.6.3"
